--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,8 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
-
+    form_themes: ['bootstrap_4_layout.html.twig'] # accepte plusieurs thèmes
+    globals: 
+        app_name: 'Store 2'
 when@test:
     twig:
         strict_variables: true
