--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=3cb670f814b6def56075e496129bcaf9
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,6 +27,6 @@ APP_SECRET=3cb670f814b6def56075e496129bcaf9
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:malick@127.0.0.1:3306/a_store_2?serverVersion=5.7&charset=utf8mb4"
+ DATABASE_URL="mysql://root:malick@127.0.0.1:3306/a_store_2_1?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
