--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     article_images_directory: '%kernel.project_dir%/public/img/article'
+    user_images_directory: '%kernel.project_dir%/public/img/user'
 services:
     # default configuration for services in *this* file
     _defaults:
