--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/e-store/
+/public/img/user/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
