--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     article_images_directory: '%kernel.project_dir%/public/img/article'
     user_images_directory: '%kernel.project_dir%/public/img/user'
+    maitenance_file_path: '%kernel.project_dir%/public/.maintenance'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -24,3 +25,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\EventListener\MaintenanceListener:
+        arguments:
+            - '%maitenance_file_path%'
+            - '@twig'
+        tags:
+            - { name: kernel.event_listener, event: kernel.request }
