translation en and fr ready

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,7 @@ twig:
     form_themes: ['bootstrap_4_layout.html.twig'] # accepte plusieurs thèmes
     globals: 
         app_name: 'Store 2'
+        locales: '%app.locales%'
 when@test:
     twig:
         strict_variables: true
