--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,7 +37,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_USER }
-        - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/customer, roles: ROLE_USER }
     role_hierarchy:
-        ROLE_EDITOR: ROLE_USER
-        ROLE_ADMIN: ROLE_USER
+        ROLE_ADMIN: ROLE_EDITOR
