--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,6 +4,7 @@ twig:
     globals: 
         app_name: 'Store 2'
         locales: '%app.locales%'
+        search_form: '@App\Twig\SearchExtension'
 when@test:
     twig:
         strict_variables: true
