card step 2 ready

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=3cb670f814b6def56075e496129bcaf9
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
