--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 31536000 # 1 week in seconds
+                path:     /
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\UserAuthenticator
