--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "dompdf/dompdf": "^2.0",
+        "fzaninotto/faker": "^1.9",
         "knplabs/knp-paginator-bundle": "^5.6",
         "knpuniversity/oauth2-client-bundle": "^2.10",
         "league/oauth2-google": "^4.0",
