--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "dompdf/dompdf": "^2.0",
+        "friendsofsymfony/ckeditor-bundle": "^2.4",
         "fzaninotto/faker": "^1.9",
         "knplabs/knp-paginator-bundle": "^5.6",
         "knpuniversity/oauth2-client-bundle": "^2.10",
@@ -96,7 +97,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "ckeditor:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
